# Resume

./: README.md  about-me.html  contact-me.html  education.html  experience.html  index.html  portfolio.html  skills.html  title.html
Projects/Personal Projects/Characters/: characters.hpp
Projects/Personal Projects/HTML Pages/: CAD Project  CAD Project.html  Review.html  SolidWorks Project.html  Thermodynamic Project.html
Projects/Personal Projects/Original Files/CAD Project/: Practice Blueprints.dwg  Practice.dwg  README.txt
Projects/Personal Projects/Original Files/Characters/: READ_ME.txt  characters.cpp  characters.hpp  main.cpp
Projects/Personal Projects/Original Files/Decoding a Secret Message (application question)/: dfSorted.csv  main.py
Projects/Personal Projects/Original Files/SolidWorks Project/: Assembly.SLDASM  Blue.SLDPRT  Green.SLDPRT  README.txt  Red.SLDPRT  SubAssemblyGreen.SLDASM  Yellow.SLDPRT
Projects/Personal Projects/Original Files/Thermodynamics Project/: CMakeLists.txt  READ ME.txt  ThermodynamicCode.cpp  ThermodynamicCode.hpp  main.cpp
Projects/Personal Projects/Original Files/Thermodynamics Project/CMakeExample2/: CMakeLists.txt  main.cpp
Projects/Personal Projects/Original Files/Traveling Salesman Problem/: READ_ME.txt
Projects/School Projects/HTML Pages/: Aerothermodynamics 1.html  Aerothermodynamics 2.html  Chemical Rocket Engine Design.html  FEM.html  Machine Learning.html  PET Capstone.html  Protection against Electromagnetic Fields and Radiation using Plasma.html  SpaceCRAFT Research.html
(+5 files in other folders)
